--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -156,9 +156,15 @@ ol {
   padding: 0 12px;
 
   @media screen and (max-width: 1023px) {
-    max-width: 250%;
+    max-width: 50%;
+    flex: 0 0 50%;
+    width: 50%;
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    max-width: 25%;
     flex: 0 0 25%;
-    width: 250%;
+    width: 25%;
     margin-bottom: 20px;
   }
 }
@@ -173,6 +179,7 @@ ol {
     flex: unset;
     flex: 0 0 100%;
     width: 100%;
+    margin-bottom: 20px;
   }
   @media screen and (min-width: 768px) and (max-width: 1023px) {
     max-width: 50%;
@@ -282,6 +289,7 @@ ol {
     text-transform: uppercase;
     font-weight: 700;
     display: flex;
+    align-items: center;
     margin-bottom: 20px;
   }
 }
